--- a/app/index.html
+++ b/app/index.html
@@ -17,5 +17,30 @@
     <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/src/main.tsx"></script>
+
+    <script>
+      (function() {
+        const hostname = window.location.hostname;
+        const umamiScript = document.createElement('script');
+        umamiScript.defer = true;
+        const analyticsScript = document.createElement('script');
+        analyticsScript.defer = true;
+
+        if (hostname.endsWith('.top')) {
+          umamiScript.src = 'https://umami.liujiarong.top/script.js';
+          umamiScript.setAttribute('data-website-id', '2bfbc2b3-1e1f-48e0-ac6b-665117069b8d');
+          analyticsScript.setAttribute('data-domain', 'liujiarong.top');
+          analyticsScript.src = 'https://analytics.liujiarong.top/js/script.js';
+        } else {
+          umamiScript.src = 'https://umami.liujiarong.top/script.js';
+          umamiScript.setAttribute('data-website-id', '4c715c06-37ac-4ee8-92ea-7169343ef4b2');
+          analyticsScript.setAttribute('data-domain', 'liujiarong.me');
+          analyticsScript.src = 'https://analytics.liujiarong.top/js/script.js';
+        }
+        
+        document.head.appendChild(umamiScript);
+        document.head.appendChild(analyticsScript);
+      })();
+    </script>
   </body>
 </html>
